# excavator

./: .gitignore
apps/backend/: cli.py  pyproject.toml
apps/backend/agents/retreiver/: README.md  agent.py
apps/backend/crawler/: async_web_crawler.py  browser_manager.py  kb_result.json
apps/backend/crawler/config/: aysnc_config.py
apps/backend/crawler/deep_crawler/: browser_manager.py
apps/backend/server/routes/doctor/: route.py
apps/excavator/: pyproject.toml
apps/excavator/excavator/: cli.py
apps/excavator/excavator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/excavator/excavator/agents/: REAME.md  base_agent.py
apps/excavator/excavator/agents/orchestrator/: agent.py
apps/excavator/excavator/agents/summerizer/: agent.py
apps/excavator/excavator/crawler/: async_web_crawler.py  browser_manager.py
apps/excavator/excavator/crawler/config/: aysnc_config.py
apps/excavator/excavator/lib/webscraper/: README.md
apps/excavator/excavator/llm/: README.md
apps/excavator/excavator/server/: server.py
apps/excavator/excavator/utils/: check_disk_space.py
