[project]
name = "excavator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "crawl4ai>=0.6.3",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "markdownify>=1.1.0",
    "patchright>=1.52.3",
    "pydantic>=2.11.4",
    "pydantic-ai>=0.2.4",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "tf-playwright-stealth>=1.1.2",
    "typer>=0.15.4",
]

[project.scripts]
excavator-cli = "excavator.cli:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"